fix spacing for footer

--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -5,6 +5,7 @@ footer {
     border-top: 1px solid #cccccc;
     position: fixed;
     bottom: 0;
+    display: inline-block;
 }
 p {
     text-align: center;
